Client-components added. Replaced IDispatcher with SynchronizationContext, etc.

--- a/MessageProcessor/04.MessageProcessor.csproj
+++ b/MessageProcessor/04.MessageProcessor.csproj
@@ -75,41 +75,43 @@
       <Link>Properties\AssemblyInfo.solution.cs</Link>
     </Compile>
     <Compile Include="CancellationTokenExtensions.cs" />
-    <Compile Include="Requests\ClientCommand.cs" />
-    <Compile Include="Requests\ClientCommand.T1.cs" />
-    <Compile Include="Requests\ClientQuery.T1.cs" />
-    <Compile Include="Requests\ClientQuery.T2.cs" />
-    <Compile Include="Requests\ClientRequest.T2.cs" />
-    <Compile Include="Requests\ClientRequestExecutionOptions.cs" />
+    <Compile Include="Requests\Clients\ClientCommand.cs" />
+    <Compile Include="Requests\Clients\ClientCommand.T1.cs" />
+    <Compile Include="Requests\Clients\ClientQuery.T1.cs" />
+    <Compile Include="Requests\Clients\ClientQuery.T2.cs" />
+    <Compile Include="Requests\Clients\ClientRequest.T2.cs" />
+    <Compile Include="Requests\Clients\ClientRequestExecutionOptions.cs" />
     <Compile Include="Requests\Command.cs" />
     <Compile Include="Requests\CommandBase.cs" />
-    <Compile Include="Requests\CompositeHasChangesIndicator.cs" />
-    <Compile Include="Requests\CompositeIsBusyIndicator.cs" />
-    <Compile Include="Requests\CompositeIsValidIndicator.cs" />
-    <Compile Include="Requests\CompositeMessage.cs" />
+    <Compile Include="Requests\Clients\CompositeHasChangesIndicator.cs" />
+    <Compile Include="Requests\Clients\CompositeIsBusyIndicator.cs" />
+    <Compile Include="Requests\Clients\CompositeIsValidIndicator.cs" />
+    <Compile Include="Requests\Clients\CompositeMessage.cs" />
     <Compile Include="Requests\ExecutionCancelledEventArgs.cs" />
     <Compile Include="Requests\ExecutionCompletedEventArgs.cs" />
     <Compile Include="Requests\ExecutionFailedEventArgs.cs" />
     <Compile Include="Requests\ExecutionStartedEventArgs.cs" />
     <Compile Include="Requests\ExecutionSucceededEventArgs.cs" />
     <Compile Include="Requests\ExecutionSucceededEventArgs.T1.cs" />
-    <Compile Include="Requests\FixedLifetime.cs" />
-    <Compile Include="Requests\IClientRequest.cs" />
+    <Compile Include="Requests\Clients\IClientRequest.cs" />
     <Compile Include="Requests\ICommand.cs" />
     <Compile Include="Requests\IHasChangesIndicator.cs" />
-    <Compile Include="Requests\IIsBusyIndicator.cs" />
+    <Compile Include="Requests\Clients\IIsBusyIndicator.cs" />
     <Compile Include="Requests\IIsValidIndicator.cs" />
+    <Compile Include="Requests\InfiniteLifetime.cs" />
     <Compile Include="Requests\IQuery.T1.cs" />
     <Compile Include="Requests\IRequest.cs" />
-    <Compile Include="Requests\MessageProcessorCommand.cs" />
+    <Compile Include="Requests\MemoryCache.cs" />
     <Compile Include="Requests\MessageProcessorCommand.T1.cs" />
     <Compile Include="Requests\MessageStateTracker.cs" />
     <Compile Include="Requests\NullMessage.cs" />
+    <Compile Include="Requests\OrLifetime.cs" />
     <Compile Include="Requests\Query.T1.cs" />
     <Compile Include="Requests\QueryBase.T1.cs" />
     <Compile Include="Requests\QueryCacheValueLifetime.cs" />
     <Compile Include="Requests\Request.cs" />
     <Compile Include="Requests\SlidingWindowLifetime.cs" />
+    <Compile Include="Requests\RequestContext.cs" />
     <Compile Include="Requests\TimerBasedLifetime.cs" />
     <Compile Include="IMessageHandlerPipelineFactory.cs" />
     <Compile Include="MessageProcessorBusSubscriptionForAction.T1.cs" />
@@ -133,12 +135,9 @@
     <Compile Include="EventHandlerExtensions.cs" />
     <Compile Include="Requests\QueryCacheValueExpiredEventArgs.cs" />
     <Compile Include="Requests\Command.T1.cs" />
-    <Compile Include="Requests\IDispatcher.cs" />
     <Compile Include="Requests\IMessage.cs" />
     <Compile Include="Requests\Query.T2.cs" />
     <Compile Include="Requests\IMessage.T1.cs" />
-    <Compile Include="Requests\IQueryCache.cs" />
-    <Compile Include="Requests\IQueryCacheValueLifetime.cs" />
     <Compile Include="Requests\Message.cs" />
     <Compile Include="Requests\Message.T1.cs" />
     <Compile Include="Requests\MessageErrorInfo.cs" />
