--- a/MessageProcessor.Tests/03.MessageProcessor.Tests.csproj
+++ b/MessageProcessor.Tests/03.MessageProcessor.Tests.csproj
@@ -87,6 +87,10 @@
       <Link>Properties\AssemblyInfo.solution.cs</Link>
     </Compile>
     <Compile Include="MessageHandlerFactoryStub.cs" />
+    <Compile Include="Requests\OrLifetimeTest.cs" />
+    <Compile Include="Requests\SlidingWindowLifetimeTest.cs" />
+    <Compile Include="Requests\TimerBasedLifetimeTest.cs" />
+    <Compile Include="Requests\MemoryCacheTest.cs" />
     <Compile Include="SampleApplicationProcessor.cs" />
     <Compile Include="SampleApplication\Infrastructure\ShoppingCartRepository.cs" />
     <Compile Include="SampleApplication\IShoppingCartRepository.cs" />
@@ -149,7 +153,9 @@
   <ItemGroup>
     <None Include="Properties\packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Requests\Clients\" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
