--- a/MessageProcessor/04.MessageProcessor.csproj
+++ b/MessageProcessor/04.MessageProcessor.csproj
@@ -77,10 +77,19 @@
     <Compile Include="CancellationTokenExtensions.cs" />
     <Compile Include="Requests\Clients\ClientCommand.cs" />
     <Compile Include="Requests\Clients\ClientCommand.T1.cs" />
+    <Compile Include="Requests\Clients\ClientEventBus.cs" />
+    <Compile Include="Requests\Clients\ClientEventBusConnection.cs" />
     <Compile Include="Requests\Clients\ClientQuery.T1.cs" />
     <Compile Include="Requests\Clients\ClientQuery.T2.cs" />
     <Compile Include="Requests\Clients\ClientRequest.T2.cs" />
     <Compile Include="Requests\Clients\ClientRequestExecutionOptions.cs" />
+    <Compile Include="Requests\Clients\Connection.cs" />
+    <Compile Include="Requests\Clients\ICompositeCommand.cs" />
+    <Compile Include="Requests\Clients\IConnection.cs" />
+    <Compile Include="Requests\Clients\OneToOneCommand.cs" />
+    <Compile Include="Requests\Clients\OneToOneCommandConnection.cs" />
+    <Compile Include="Requests\Clients\RelayCommand.cs" />
+    <Compile Include="Requests\Clients\RelayCommand.T1.cs" />
     <Compile Include="Requests\Command.cs" />
     <Compile Include="Requests\CommandBase.cs" />
     <Compile Include="Requests\Clients\CompositeHasChangesIndicator.cs" />
