Added the OneToManyCommand.

--- a/MessageProcessor.Tests/03.MessageProcessor.Tests.csproj
+++ b/MessageProcessor.Tests/03.MessageProcessor.Tests.csproj
@@ -90,6 +90,7 @@
     <Compile Include="NullEventBus.cs" />
     <Compile Include="Requests\Clients\ClientEventBusStub.cs" />
     <Compile Include="Requests\Clients\ClientEventBusTest.cs" />
+    <Compile Include="Requests\Clients\OneToManyCommandTest.cs" />
     <Compile Include="Requests\Clients\OneToOneCommandTest.cs" />
     <Compile Include="Requests\Clients\RelayCommandOfT1.Test.cs" />
     <Compile Include="Requests\OrLifetimeTest.cs" />
