--- a/MessageProcessor/04.MessageProcessor.csproj
+++ b/MessageProcessor/04.MessageProcessor.csproj
@@ -75,39 +75,42 @@
       <Link>Properties\AssemblyInfo.solution.cs</Link>
     </Compile>
     <Compile Include="CancellationTokenExtensions.cs" />
-    <Compile Include="Requests\Command.cs" />
-    <Compile Include="Requests\CommandBase.cs" />
+    <Compile Include="CommandHandler.T1.cs" />
+    <Compile Include="Connection.cs" />
+    <Compile Include="IConnection.cs" />
+    <Compile Include="InvalidCommandException.cs" />
+    <Compile Include="Requests\CommandDispatcher.cs" />
+    <Compile Include="Requests\CommandDispatcherBase.cs" />
     <Compile Include="Requests\ExecutionCancelledEventArgs.cs" />
     <Compile Include="Requests\ExecutionCompletedEventArgs.cs" />
     <Compile Include="Requests\ExecutionFailedEventArgs.cs" />
     <Compile Include="Requests\ExecutionStartedEventArgs.cs" />
     <Compile Include="Requests\ExecutionSucceededEventArgs.cs" />
     <Compile Include="Requests\ExecutionSucceededEventArgs.T1.cs" />
-    <Compile Include="Requests\ICommand.cs" />
-    <Compile Include="Requests\IHasChangesIndicator.cs" />
-    <Compile Include="Requests\IIsValidIndicator.cs" />
+    <Compile Include="Requests\ICommandDispatcher.cs" />
+    <Compile Include="IHasChangesIndicator.cs" />
+    <Compile Include="IIsValidIndicator.cs" />
     <Compile Include="Requests\InfiniteLifetime.cs" />
-    <Compile Include="Requests\IQuery.T1.cs" />
-    <Compile Include="Requests\IRequest.cs" />
+    <Compile Include="Requests\IQueryDispatcher.T1.cs" />
+    <Compile Include="Requests\IRequestDispatcher.cs" />
     <Compile Include="Requests\MemoryCache.cs" />
-    <Compile Include="Requests\MessageProcessorCommand.T1.cs" />
     <Compile Include="Requests\MessageStateTracker.cs" />
     <Compile Include="Requests\NullMessage.cs" />
     <Compile Include="Requests\OrLifetime.cs" />
-    <Compile Include="Requests\Query.T1.cs" />
-    <Compile Include="Requests\QueryBase.T1.cs" />
+    <Compile Include="Requests\QueryDispatcher.T1.cs" />
+    <Compile Include="Requests\QueryDispatcherBase.T1.cs" />
     <Compile Include="Requests\QueryCacheValueLifetime.cs" />
-    <Compile Include="Requests\Request.cs" />
+    <Compile Include="Requests\RequestDispatcher.cs" />
     <Compile Include="Requests\SlidingWindowLifetime.cs" />
     <Compile Include="Requests\RequestContext.cs" />
     <Compile Include="Requests\TimerBasedLifetime.cs" />
     <Compile Include="IMessageHandlerPipelineFactory.cs" />
-    <Compile Include="MessageProcessorBusSubscriptionForAction.T1.cs" />
+    <Compile Include="MessageProcessorBusConnectionForAction.T1.cs" />
     <Compile Include="IMessageHandler.T1.cs" />
     <Compile Include="IMessageHandlerPipeline.T1.cs" />
     <Compile Include="IMessageProcessor.cs" />
     <Compile Include="IMessageProcessorBus.cs" />
-    <Compile Include="MessageProcessorBusSubscriptionForInterface.T1.cs" />
+    <Compile Include="MessageProcessorBusConnectionForInterface.T1.cs" />
     <Compile Include="InstanceLifetimeAttribute.cs" />
     <Compile Include="MessageStack.cs" />
     <Compile Include="MessageHandlerPipeline.T1.cs" />
@@ -117,14 +120,14 @@
     <Compile Include="MessageHandlerPipelineForClass.T1.cs" />
     <Compile Include="MessageHandlerPipelineForInterface.T1.cs" />
     <Compile Include="MessageProcessor.cs" />
-    <Compile Include="MessageProcessorBusSubscription.cs" />
+    <Compile Include="MessageProcessorBusConnection.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="MessageHandlerFactory.cs" />
     <Compile Include="EventHandlerExtensions.cs" />
     <Compile Include="Requests\QueryCacheValueExpiredEventArgs.cs" />
-    <Compile Include="Requests\Command.T1.cs" />
-    <Compile Include="Requests\IMessage.cs" />
-    <Compile Include="Requests\Query.T2.cs" />
+    <Compile Include="Requests\CommandDispatcher.T1.cs" />
+    <Compile Include="IMessage.cs" />
+    <Compile Include="Requests\QueryDispatcher.T2.cs" />
     <Compile Include="Requests\IMessage.T1.cs" />
     <Compile Include="Requests\Message.cs" />
     <Compile Include="Requests\Message.T1.cs" />
