Added the IAsyncValidationService interface and implemented IServiceProvider on the Message-class to enhance selfvalidation.

--- a/MessageProcessor.UnitOfWork/06.MessageProcessor.UnitOfWork.csproj
+++ b/MessageProcessor.UnitOfWork/06.MessageProcessor.UnitOfWork.csproj
@@ -81,6 +81,7 @@
     <Compile Include="ICache.cs" />
     <Compile Include="ICachedItem.T1.cs" />
     <Compile Include="IDomainEventBus.cs" />
+    <Compile Include="Messages\IAsyncValidationService.cs" />
     <Compile Include="Messages\IHasChangesIndicator.cs" />
     <Compile Include="Messages\IIsValidIndicator.cs" />
     <Compile Include="Messages\IMessage.cs" />
