--- a/MessageProcessor.UnitOfWork/06.MessageProcessor.UnitOfWork.csproj
+++ b/MessageProcessor.UnitOfWork/06.MessageProcessor.UnitOfWork.csproj
@@ -67,7 +67,8 @@
     <Compile Include="Aggregates\IWritableEventStream.T1.cs" />
     <Compile Include="Aggregates\MemoryEventStream.T1.cs" />
     <Compile Include="BufferedEvent.T1.cs" />
-    <Compile Include="CachedItem.T1.cs" />
+    <Compile Include="CacheEntry.T1.cs" />
+    <Compile Include="CacheRelay.cs" />
     <Compile Include="Clocks\Clock.cs" />
     <Compile Include="Clocks\ClockScope.cs" />
     <Compile Include="Clocks\ClockWithOffset.cs" />
@@ -79,7 +80,7 @@
     <Compile Include="EventHandlerExtensions.cs" />
     <Compile Include="IBufferedEvent.cs" />
     <Compile Include="ICache.cs" />
-    <Compile Include="ICachedItem.T1.cs" />
+    <Compile Include="ICacheEntry.T1.cs" />
     <Compile Include="IDomainEventBus.cs" />
     <Compile Include="Messages\IAsyncValidationService.cs" />
     <Compile Include="Messages\IHasChangesIndicator.cs" />
@@ -94,13 +95,14 @@
     <Compile Include="Messages\MessagePropertyLabelCollection.cs" />
     <Compile Include="Messages\NullMessage.cs" />
     <Compile Include="Messages\PropertyChangedNotifier.cs" />
+    <Compile Include="UnitOfWorkCache.cs" />
     <Compile Include="UnitOfWorkController.cs" />
     <Compile Include="Clocks\IClock.cs" />
     <Compile Include="RequestExecutionException.cs" />
     <Compile Include="IUnitOfWork.cs" />
     <Compile Include="Clocks\SystemClock.cs" />
     <Compile Include="UnitOfWorkContext.cs" />
-    <Compile Include="UnitOfWorkCache.cs" />
+    <Compile Include="Cache.cs" />
     <Compile Include="UnitOfWorkScope.cs" />
     <Compile Include="Properties\AssemblyInfo.project.cs" />
     <Compile Include="Resources\ExceptionMessages.Designer.cs">
