- Refactored some parts of the Aggregate and Repository classes. - Added missing XML-documentation.

--- a/Messaging/04.Messaging.csproj
+++ b/Messaging/04.Messaging.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Client\CommandDispatcher.cs" />
     <Compile Include="Client\CommandDispatcher.T1.cs" />
     <Compile Include="Client\CommandDispatcherBase.cs" />
+    <Compile Include="Server\AggregateNotFoundException.cs" />
     <Compile Include="Server\CommandHandler.T1.cs" />
     <Compile Include="Client\ExecutionCancelledEventArgs.cs" />
     <Compile Include="Client\ExecutionCompletedEventArgs.cs" />
@@ -80,23 +81,22 @@
     <Compile Include="Client\SlidingWindowLifetime.cs" />
     <Compile Include="Client\TimerBasedLifetime.cs" />
     <Compile Include="Server\AggregateSet.T3.cs" />
-    <Compile Include="Server\BufferedEvent.T2.cs" />
+    <Compile Include="Server\BufferedEvent.T3.cs" />
     <Compile Include="Server\BufferedEventAggregate.T2.cs" />
-    <Compile Include="Server\IAggregateStore.T2.cs" />
-    <Compile Include="Server\Aggregate.T3.cs" />
+    <Compile Include="Server\AggregateVersionTracker.T3.cs" />
     <Compile Include="Server\IAggregateVersion.T1.cs" />
     <Compile Include="Server\DateTimeVersion.cs" />
     <Compile Include="Server\Int64Version.cs" />
-    <Compile Include="Server\UnitOfWork.T3.cs" />
+    <Compile Include="Server\Repository.T3.cs" />
     <Compile Include="Server\Int32Version.cs" />
-    <Compile Include="Server\DomainModelException.cs" />
+    <Compile Include="Server\DomainException.cs" />
     <Compile Include="Server\IAggregate.T2.cs" />
     <Compile Include="Server\EventSourcedAggregate.T2.cs" />
-    <Compile Include="Server\IBufferedEvent.T1.cs" />
-    <Compile Include="Server\IBufferedEventStream.T1.cs" />
-    <Compile Include="Server\IDomainEvent.T1.cs" />
-    <Compile Include="Server\IWritableEventStream.T1.cs" />
-    <Compile Include="Server\MemoryEventStream.T1.cs" />
+    <Compile Include="Server\IBufferedEvent.T2.cs" />
+    <Compile Include="Server\IBufferedEventStream.T2.cs" />
+    <Compile Include="Server\IAggregateEvent.T2.cs" />
+    <Compile Include="Server\IWritableEventStream.T2.cs" />
+    <Compile Include="Server\MemoryEventStream.T2.cs" />
     <Compile Include="Server\BufferedEvent.T1.cs" />
     <Compile Include="Connection.cs" />
     <Compile Include="IConnection.cs" />
