- Added some nuspec-files and post-build events to automatically create all desired NuGet-packages from the build.

--- a/Messaging.Unity/02.Messaging.Unity.csproj
+++ b/Messaging.Unity/02.Messaging.Unity.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Server\MessageHandlerFactoryForUnity.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="02.Messaging.Unity.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -77,6 +78,9 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>nuget pack "$(ProjectPath)" -Prop Configuration=Release -IncludeReferencedProjects -OutputDirectory "C:\Development\NuGet Packages"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
