- Extended the IMessageProcessorBus interface to allow for dynamically registering MessageHandlers at runtime. - Slightly refactored the RequestContext to the AsyncOperationContext class.

--- a/Messaging/04.Messaging.csproj
+++ b/Messaging/04.Messaging.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -76,7 +77,7 @@
     <Compile Include="Client\QueryDispatcher.T2.cs" />
     <Compile Include="Client\QueryDispatcherBase.T1.cs" />
     <Compile Include="Client\QueryDispatcherRelay.T2.cs" />
-    <Compile Include="Client\RequestContext.cs" />
+    <Compile Include="Client\AsyncOperationContext.cs" />
     <Compile Include="Client\RequestDispatcher.cs" />
     <Compile Include="Client\SlidingWindowLifetime.cs" />
     <Compile Include="Client\TimerBasedLifetime.cs" />
