- Improved the TransactionSupport on dispatching and publishing events. - Removed the Query.T2 class, for it was not necessary.

--- a/Messaging.Client.Tests/01.Messaging.Client.Tests.csproj
+++ b/Messaging.Client.Tests/01.Messaging.Client.Tests.csproj
@@ -39,6 +39,7 @@
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Transactions" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -56,6 +57,7 @@
     <Compile Include="..\AssemblyInfo.solution.cs">
       <Link>Properties\AssemblyInfo.solution.cs</Link>
     </Compile>
+    <Compile Include="Client\SynchronousContext.cs" />
     <Compile Include="Properties\AssemblyInfo.project.cs" />
     <Compile Include="Client\ClientEventBusStub.cs" />
     <Compile Include="Client\ClientEventBusTest.cs" />
