--- a/Messaging/04.Messaging.csproj
+++ b/Messaging/04.Messaging.csproj
@@ -69,7 +69,6 @@
     <Compile Include="Client\MemoryCache.cs" />
     <Compile Include="Client\MessageStateTracker.cs" />
     <Compile Include="Client\OrLifetime.cs" />
-    <Compile Include="Client\Query.T2.cs" />
     <Compile Include="Client\QueryCache.cs" />
     <Compile Include="Client\QueryCacheValue.cs" />
     <Compile Include="Client\QueryCacheValueExpiredEventArgs.cs" />
@@ -77,14 +76,13 @@
     <Compile Include="Client\QueryDispatcher.T1.cs" />
     <Compile Include="Client\QueryDispatcher.T2.cs" />
     <Compile Include="Client\QueryDispatcherBase.T1.cs" />
-    <Compile Include="Client\QueryDispatcherRelay.T2.cs" />
     <Compile Include="Client\SynchronizationContextScope.cs" />
     <Compile Include="Client\RequestDispatcher.cs" />
     <Compile Include="Client\SlidingWindowLifetime.cs" />
     <Compile Include="Client\TimerBasedLifetime.cs" />
     <Compile Include="Server\AggregateSet.T3.cs" />
-    <Compile Include="Server\BufferedEvent.T3.cs" />
-    <Compile Include="Server\BufferedEventAggregate.T2.cs" />
+    <Compile Include="Server\EventBuffer.T3.cs" />
+    <Compile Include="Server\Aggregate.T2.cs" />
     <Compile Include="Server\AggregateVersionTracker.T3.cs" />
     <Compile Include="Server\IAggregateVersion.T1.cs" />
     <Compile Include="Server\DateTimeVersion.cs" />
@@ -94,12 +92,12 @@
     <Compile Include="Server\DomainException.cs" />
     <Compile Include="Server\IAggregate.T2.cs" />
     <Compile Include="Server\EventSourcedAggregate.T2.cs" />
-    <Compile Include="Server\IBufferedEvent.T2.cs" />
-    <Compile Include="Server\IBufferedEventStream.T2.cs" />
+    <Compile Include="Server\IEventBuffer.T2.cs" />
+    <Compile Include="Server\IEventStream.T2.cs" />
     <Compile Include="Server\IAggregateEvent.T2.cs" />
     <Compile Include="Server\IWritableEventStream.T2.cs" />
     <Compile Include="Server\MemoryEventStream.T2.cs" />
-    <Compile Include="Server\BufferedEvent.T1.cs" />
+    <Compile Include="Server\EventBuffer.T1.cs" />
     <Compile Include="Connection.cs" />
     <Compile Include="IConnection.cs" />
     <Compile Include="CancellationTokenExtensions.cs" />
@@ -135,7 +133,7 @@
     <Compile Include="ThreadStaticClockContext.cs" />
     <Compile Include="Server\BufferedEventBus.cs" />
     <Compile Include="EventHandlerExtensions.cs" />
-    <Compile Include="Server\IBufferedEvent.cs" />
+    <Compile Include="Server\IEventBuffer.cs" />
     <Compile Include="Server\IScopeSpecificCache.cs" />
     <Compile Include="Server\IScopeSpecificCacheEntry.T1.cs" />
     <Compile Include="Server\IDomainEventBus.cs" />
