--- a/Messaging.Client/02.Messaging.Client.csproj
+++ b/Messaging.Client/02.Messaging.Client.csproj
@@ -47,7 +47,7 @@
     <Compile Include="..\AssemblyInfo.solution.cs">
       <Link>Properties\AssemblyInfo.solution.cs</Link>
     </Compile>
-    <Compile Include="Client\ClientEventBusMessageBuffer.cs" />
+    <Compile Include="Client\TransactionalEventBuffer.T1.cs" />
     <Compile Include="Properties\AssemblyInfo.project.cs" />
     <Compile Include="Client\ClientCommandDispatcher.cs" />
     <Compile Include="Client\ClientCommandDispatcher.T1.cs" />
