--- a/Messaging.Client/02.Messaging.Client.csproj
+++ b/Messaging.Client/02.Messaging.Client.csproj
@@ -49,19 +49,19 @@
     </Compile>
     <Compile Include="Client\TransactionalEventBuffer.T1.cs" />
     <Compile Include="Properties\AssemblyInfo.project.cs" />
-    <Compile Include="Client\ClientCommandDispatcher.cs" />
-    <Compile Include="Client\ClientCommandDispatcher.T1.cs" />
+    <Compile Include="Client\CommandDispatcherCommand.cs" />
+    <Compile Include="Client\CommandDispatcherCommand.T1.cs" />
     <Compile Include="Client\ClientEventBus.cs" />
     <Compile Include="Client\ClientEventBusConnection.cs" />
-    <Compile Include="Client\ClientQueryDispatcher.T1.cs" />
-    <Compile Include="Client\ClientQueryDispatcher.T2.cs" />
-    <Compile Include="Client\ClientRequestDispatcher.T2.cs" />
-    <Compile Include="Client\ClientRequestExecutionOptions.cs" />
+    <Compile Include="Client\QueryDispatcherCommand.T1.cs" />
+    <Compile Include="Client\QueryDispatcherCommand.T2.cs" />
+    <Compile Include="Client\RequestDispatcherCommand.T2.cs" />
+    <Compile Include="Client\CommandExecutionOptions.cs" />
     <Compile Include="Client\CompositeHasChangesIndicator.cs" />
     <Compile Include="Client\CompositeIsBusyIndicator.cs" />
     <Compile Include="Client\CompositeIsValidIndicator.cs" />
     <Compile Include="Client\CompositeMessage.cs" />
-    <Compile Include="Client\IClientRequestDispatcher.cs" />
+    <Compile Include="Client\IRequestDispatcherCommand.cs" />
     <Compile Include="Client\ICompositeCommand.cs" />
     <Compile Include="Client\IIsBusyIndicator.cs" />
     <Compile Include="Client\OneToManyCommand.cs" />
